Revert "Rebuild R3 with inline query and aligned UI; adjust filters"
This reverts commit 493a70ae6f2bff02c1c4bfd1685e272d7903d63f.